<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloAplicacion"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/Button01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Arrancar"/>
    <Button
        android:id="@+id/Button02"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Configurar"/>

    <Button
        android:id="@+id/Button03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarAcercaDe"
        android:text="@string/Acercade" />

    <Button
        android:id="@+id/bSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="terminarAplicacion"
        android:text="@string/Salir" />
</LinearLayout>